crates/djls-python/tests/snapshots/corpus__repos__djangoproject.com__releases__templatetags__date_format.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "releases.templatetags.date_format::tag::isodate":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: datestr
        required: true
        kind: Variable
        position: 0
      - name: dateformat
        required: false
        kind: Variable
        position: 1
    supports_as_var: true
filter_arities: {}
block_specs: {}
